[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reachify-cli"
version = "0.0.1"
description = "Reachify CLI — talk to the Reachify backend, retrieve/post data, and materialize backend-instructed files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
]

[project.scripts]
reachify = "reachify.cli:_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/reachify"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
